--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,80 +1,83 @@
 @import "../../vars.css";
 
 .navbar {
-    position:relative;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    padding-top:61px;
-    z-index:2;
-    margin:0 10%;
-
-
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 61px;
+  z-index: 2;
+  margin: 0 10%;
 }
 
-.title{
-    font-size:30px;
-    font-weight:600;
-    text-decoration:none;
-    color:var(--color-text);
-
+.title {
+  font-size: 30px;
+  font-weight: 600;
+  text-decoration: none;
+  color: bisque;
 }
 
-.menu{
-    display:flex;
-
-}
-.menuItems{
-    display:flex;
-    gap:47px;
-    list-style:none;
-
+.menuBtn {
+  display: none;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
 }
 
-.menuItems a{
-    font-size:25px;
-    color:var(--color-bg);
-    width:100%;
-    height:100%;
+.menu {
+  display: flex;
+  align-items: center;
 }
 
-@media screen and (max-width:830px){
-    .navbar{
-        flex-direction:column;
-        align-items:flex-start;
+.menuItems {
+  display: flex;
+  gap: 47px;
+  list-style: none;
+  padding: 16px 24px;
+  margin: 0;
+  background: linear-gradient(0deg, #550000 0%, #ffdab9 100%);
+  border-radius: 10px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+}
 
-    }
+.menuItems a {
+  font-size: 25px;
+  color: black; /* Siyah metin rengi */
+  text-decoration: none;
+}
 
-    .menu{
-        position:absolute;
-        right:0;
-        margin-right:10%;
-        flex-direction:column;
-        align-items:flex-end;
-        gap:11px;
-        z-index:3;
-    }
+/* Mobil görünüm */
+@media screen and (max-width: 830px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
-    .menuBtn {
-        display:block;
-        cursor:pointer;
+  .menu {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    margin-right: 10%;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 11px;
+    z-index: 3;
+  }
 
-    }
+  .menuBtn {
+    display: block;
+  }
 
-    .menuItems{
-       display:none;
-        flex-direction:column;
-        align-items:center;
-        gap:13px;
-        border-radius:10px;
-        background: #bc8f8f;
-        background:linear-gradient(0deg,(#550000)0%,(#ffdab9)100%);
-        padding:24px 33px;
-        box-shadow:0 0 4px 0 rgba(0,0,0,0.25);
-    }
+  .menuItems {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 13px;
+    padding: 24px 33px;
+  }
 
-    .menuOpen{
-        display:flex;
-        z-index:1;
-    }
+  .menuOpen {
+    display: flex !important;
+    z-index: 1;
+  }
 }
