--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,22 +1,22 @@
 @import "../../vars.css";
 
-.container{
-    position:relative;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    margin-top:49px;
-    z-index:1;
-    margin-left:10%;
-    margin-right:10%;
+.container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 49px;
+  z-index: 1;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-.content{
-    display:flex;
-    flex-direction:column;
-    align-items:flex-start;
-    color:var(--color-text);
-    z-index:1;
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  color: var(--color-text);
+  z-index: 1;
 }
 
 .title {
@@ -24,23 +24,20 @@
   font-weight: 900;
   margin-bottom: 33px;
   font-family: var(--font-roboto);
-  color: var(--color-text); /* veya color: white; */
+  color: var(--color-text);
 }
-
-
 
 .description {
   font-size: 30px;
   font-family: var(--font-roboto);
   margin-bottom: 52px;
-
-  /* EKSTRA: Eğer yanlışlıkla arka plan eklenmişse kaldır */
   background: none;
   border: none;
 }
+
 .contactBtn {
   text-decoration: none;
-  background-color: var(--color-primary); /* Buton arka planı */
+  background-color: var(--color-primary);
   color: var(--color-text);
   border-radius: 100px;
   font-size: 30px;
@@ -53,6 +50,7 @@
 .contactBtn:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
+
 .heroImg {
   width: 250px;
   height: auto;
@@ -62,53 +60,84 @@
   animation: floating 3s infinite ease-in-out;
 }
 
-
-@keyframes floating{
-    0%{
-        transform: translate(0,0px);
-    }
-    50%{
-        transform: translate(0, 10px);
-    }
-    100%{
-        transform:translate(0,-0px);
-
-    }
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 10px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
 }
 
-.bottomBlur{
-    position:absolute;
-    width:70vw;
-    height:50vw;
-    min-width:350px;
-    min-width:250px;
-    top:246x;
-    left:-25vw;
-    border-radius:764px;
-    background:rgba(77, 8, 8, 0.7);
-    filter:blur(100px);
-    z-index:0;
-}
-.topBlur{
-    position:absolute;
-    width:50vw;
-    height:50vw;
-    min-width:350px;
-    min-width:350px;
-    top:-128px;
-    left:-10vw;
-    border-radius:764px;
-    background:rgba(77, 8, 8, 0.7);
-    filter:blur(100px);
-    z-index:0;
+.bottomBlur {
+  position: absolute;
+  width: 70vw;
+  height: 50vw;
+  min-width: 350px;
+  min-height: 250px;
+  top: 246px;
+  left: -25vw;
+  border-radius: 764px;
+  background: rgba(77, 8, 8, 0.7);
+  filter: blur(100px);
+  z-index: 0;
 }
 
-@media screen and (max-width:830px){
-    .container{
-        flex-direction:column-reverse;
-    }
+.topBlur {
+  position: absolute;
+  width: 50vw;
+  height: 50vw;
+  min-width: 350px;
+  min-height: 350px;
+  top: -128px;
+  left: -10vw;
+  border-radius: 764px;
+  background: rgba(77, 8, 8, 0.7);
+  filter: blur(100px);
+  z-index: 0;
+}
 
-    .content{
-        align-items:center;
-    }
+@media screen and (max-width: 830px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+
+  .content {
+    align-items: center;
+  }
+}
+
+/* İletişim Formu Stilleri */
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1rem;
+  width: 100%;
+  max-width: 400px;
+}
+
+.input,
+.textarea {
+  padding: 0.75rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.submitButton {
+  padding: 0.75rem;
+  font-size: 1rem;
+  background-color: #0077ff;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background-color: #005fcc;
 }
